config/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sigstore-demo-app
  labels:
    app: sigstore-demo-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: sigstore-demo-app
  type: ClusterIP
